# nnshogi

./: .gitignore  .project  Cargo.toml  README.md  build.bat  nnshogi_ja.txt  settings.toml.sample
src/: error.rs  hash.rs  learning.rs  main.rs  nn.rs  player.rs  solver.rs
