[package]
name = "nnshogi"
version = "0.9.0"
authors = ["jinpu"]
[dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
statrs = "0.15.0"
rand_distr = "0.4.3"
getopts = "0.2"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
crossbeam-channel = "0.5"
[dependencies.csaparser]
path = "../CsaParser"
[dependencies.packedsfen]
path = "../packedsfen"
[dependencies.usiagent]
path = "../USIAgent"
[dependencies.nncombinator]
path = "../nncombinator"
